--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aos": "^2.3.3",
     "bootstrap": "^4.1.2",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rails-ujs": "^5.2.0",
     "simple-line-icons": "^2.4.1",
     "turbolinks": "^5.1.1"
