--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
   },
   "homepage": "https://gitlab.com/steamcomputing/promo",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.1.0",
     "animate.css": "^3.6.1",
     "aos": "^2.3.3",
     "bootstrap": "^4.1.2",
+    "font-awesome": "https://github.com/promo-themes/Font-Awesome.git#fa-4",
+    "han-css": "^3.3.0",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rails-ujs": "^5.2.0",
