--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "rails-ujs": "^5.2.0",
+    "simple-line-icons": "https://github.com/promo-themes/simple-line-icons.git",
     "turbolinks": "^5.1.1"
   }
 }
