--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   },
   "homepage": "https://gitlab.com/steamcomputing/promo",
   "dependencies": {
-    "animate.css": "^3.6.1",
-    "aos": "^2.3.3",
+    "aos": "^3.0.0-beta.4",
     "bootstrap": "^4.1.2",
     "font-awesome": "https://github.com/promo-themes/Font-Awesome.git#fa-4",
     "han-css": "^3.3.0",
