--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://gitlab.com/steamcomputing/promo",
   "dependencies": {
+    "@danielfarrell/bootstrap-combobox": "https://github.com/promo-themes/bootstrap-combobox.git",
     "animate.css": "^3.7.0",
     "aos": "^3.0.0-beta.4",
     "bootstrap": "^4.1.2",
