--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "https://github.com/promo-themes/Font-Awesome.git#fa-4",
     "han-css": "^3.3.0",
     "jquery": "^3.3.1",
+    "jquery-table-fixed-head": "https://github.com/promo-themes/jquery-table-fixed-head.git",
     "popper.js": "^1.14.3",
     "rails-ujs": "^5.2.0",
     "simple-line-icons": "https://github.com/promo-themes/simple-line-icons.git",
