--- a/package.json
+++ b/package.json
@@ -3,30 +3,30 @@
   "version": "1.0.0",
   "description": "Promo",
   "main": "js/all.js",
-  "private": true,
+  "private": false,
   "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://gitlab.com:steamcomputing/promo.git"
+    "url": "https://github.com/cms-promo/promo.git"
   },
   "author": "Fox Chao",
   "license": "FOX",
   "bugs": {
-    "url": "https://gitlab.com/steamcomputing/promo/issues"
+    "url": "https://github.com/cms-promo/promo/issues"
   },
-  "homepage": "https://gitlab.com/steamcomputing/promo",
+  "homepage": "https://github.com/steamcomputing/promo",
   "dependencies": {
-    "@danielfarrell/bootstrap-combobox": "https://github.com/promo-themes/bootstrap-combobox.git",
+    "@danielfarrell/bootstrap-combobox": "https://github.com/cms-promo/bootstrap-combobox.git",
     "animate.css": "^3.7.0",
     "aos": "^3.0.0-beta.4",
     "bootstrap": "^4.1.2",
-    "font-awesome": "https://github.com/promo-themes/Font-Awesome.git#fa-4",
+    "font-awesome": "https://github.com/cms-promo/Font-Awesome.git#fa-4",
     "han-css": "^3.3.0",
     "jquery": "^3.3.1",
-    "jquery-table-fixed-head": "https://github.com/promo-themes/jquery-table-fixed-head.git",
+    "jquery-table-fixed-head": "https://github.com/cms-promo/jquery-table-fixed-head.git",
     "popper.js": "^1.14.3",
     "rails-ujs": "^5.2.0",
-    "simple-line-icons": "https://github.com/promo-themes/simple-line-icons.git",
+    "simple-line-icons": "https://github.com/cms-promo/simple-line-icons.git",
     "turbolinks": "^5.1.1"
   }
 }
