--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "promo",
   "version": "1.0.0",
   "description": "Promo",
-  "main": "js/all.js",
+  "main": "frontend/packs/all.js",
   "private": false,
   "scripts": {},
   "repository": {
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/steamcomputing/promo",
   "dependencies": {
     "@danielfarrell/bootstrap-combobox": "https://github.com/cms-promo/bootstrap-combobox.git",
+    "@stimulus/webpack-helpers": "^1.0.0",
     "animate.css": "^3.7.0",
     "aos": "^3.0.0-beta.4",
     "bootstrap": "^4.1.2",
@@ -27,6 +28,7 @@
     "popper.js": "^1.14.3",
     "rails-ujs": "^5.2.0",
     "simple-line-icons": "https://github.com/cms-promo/simple-line-icons.git",
+    "stimulus": "^1.1.0",
     "turbolinks": "^5.1.1"
   }
 }
